# Stock-BE

./: .env  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  stock_app.db
alembic/: env.py
alembic/versions/: a0feae66247e_.py
stock_app/: app.py
stock_app/core/: config.py
stock_app/db/: session.py
stock_app/models/: stock.py
