[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["tjsxor50 <tjsxor50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pytest = "^8.3.4"
pandas = "^2.2.3"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
